--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html {
 .nav-top {
   position: sticky;
   top: 0;
+  z-index: 999;
   display: grid;
   grid-template-columns: auto 1fr;
   grid-template-rows: auto auto;
